Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-97085

Crash while JITting QRegularExpression in multiple threads (Rosetta)

XMLWordPrintable

    • Icon: Bug Bug
    • Resolution: Done
    • Icon: P1: Critical P1: Critical
    • 5.15.8, 6.2.1, 6.3.0 Alpha
    • 5.15.5, 6.2.0
    • None
    • MacBook Pro M1, macOS 11.5.2, Intel build of Qt Creator
    • macOS
    • b689d8dccd3c260e88116285b7b75e827ca9954b (qt/qtbase/dev) 9b80b06ed43249c0b169f4258c44862f01f34929 (qt/qtbase/6.2) 75b5f00205a63e64129dda917f18c555c7597a02 (qt/tqtc-qtbase/5.15), 21cb45e66 (master)

      When I work with Qt Creator it crash regularly with same error. Log attached.

        1. QtCreatorCrush.txt
          177 kB
          Igor Shirokov
        No reviews matched the request. Check your Options in the drop-down menu of this sections header.

            vestbo Tor Arne Vestbø
            nollk Igor Shirokov
            Votes:
            1 Vote for this issue
            Watchers:
            5 Start watching this issue

              Created:
              Updated:
              Resolved:

                There are no open Gerrit changes